logs/m3-ui.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/m3_ext'...
Listing './lib/python3.5/site-packages/m3_ext/demo'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions/containers'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions/fields'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions/grids'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions/tree'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions/windows'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions/windows/static'...
Listing './lib/python3.5/site-packages/m3_ext/demo/actions/windows/static/js'...
Listing './lib/python3.5/site-packages/m3_ext/gears'...
Listing './lib/python3.5/site-packages/m3_ext/static'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/images'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/images/lightbox'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/js'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop/images'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop/images/taskbar'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop/images/taskbar/black'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop/images/taskbar/blue'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop/js'...
Listing './lib/python3.5/site-packages/m3_ext/static/ext/web-desktop/wallpapers'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/contrib'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/contrib/m3_checkie'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/contrib/m3_checkie/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/contrib/m3_checkie/images'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/contrib/m3_docs'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/contrib/m3_docs/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/contrib/m3_docs/images'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/icons'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/images'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/js'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/js/ext-extensions'...
Listing './lib/python3.5/site-packages/m3_ext/static/m3/js/other'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/codemirror'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/codemirror/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/codemirror/js'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/adapter'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/adapter/ext'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/adapter/jquery'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/locale'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/css/structure'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/css/theme-access'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/css/theme-gray'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/css/ux'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/css/visual'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/images'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/images/access'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/images/default'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/images/gray'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/images/slate'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/images/vista'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/extjs/resources/images/yourtheme'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/jquery'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/jquery/plugins'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/livegrid'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/livegrid/resources'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/livegrid/resources/css'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/livegrid/resources/images'...
Listing './lib/python3.5/site-packages/m3_ext/static/vendor/socket-io-client'...
Listing './lib/python3.5/site-packages/m3_ext/templates'...
Listing './lib/python3.5/site-packages/m3_ext/ui'...
Compiling './lib/python3.5/site-packages/m3_ext/ui/app_ui.py'...
***   File "./lib/python3.5/site-packages/m3_ext/ui/app_ui.py", line 342
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m3_ext/ui/containers'...
Listing './lib/python3.5/site-packages/m3_ext/ui/controls'...
Listing './lib/python3.5/site-packages/m3_ext/ui/fields'...
Listing './lib/python3.5/site-packages/m3_ext/ui/menus'...
Listing './lib/python3.5/site-packages/m3_ext/ui/misc'...
Listing './lib/python3.5/site-packages/m3_ext/ui/panels'...
Listing './lib/python3.5/site-packages/m3_ext/ui/windows'...
Listing './lib/python3.5/site-packages/m3_ui-3.0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
